quick fix for images on mobile / small display

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,15 +69,20 @@
 .panel{
 	border: 0;
 	border-radius: 0px;
+	max-width:420px;
+
 }
 .thumbnail{
 	background-color: #efbf2d;
 	border: 0;
 	border-radius: 0px;
 	padding: 0px;
+	max-width:420px;
+
 }
 .thumbnail img{
-	min-width: 100%;
+	width: 100%;
+	max-width:420px;
 }
 .modal img{
 	margin: 0 10px 10px 0px;
